--- a/manifest.json
+++ b/manifest.json
@@ -1,28 +1,27 @@
 {
   "manifest_version": 2,
-
   "name": "Vault for Chrome",
   "description": "This extension will access specified Vault server and authenticate",
   "version": "1.0",
   "browser_action": {
-   "default_icon": "icon.png",
-   "default_popup": "popup.html",
-   "default_title": "Use Vault server"
+    "default_icon": "icon.png",
+    "default_popup": "popup.html",
+    "default_title": "Use Vault server"
   },
   "options_page": "options.html",
   "content_scripts": [
-  {
-    "matches": [
-      "<all_urls>"
-    ],
-    "js": ["jquery-2.1.4.min.js", "content.js"]
-  }
+    {
+      "matches": [
+        "<all_urls>"
+      ],
+      "js": [
+        "jquery-2.1.4.min.js",
+        "content.js"
+      ]
+    }
   ],
-  "background": {
-  "scripts": ["background.js"]
-  },
   "permissions": [
-   "activeTab",
-   "http://*/"
-   ]
+    "activeTab",
+    "http://*/"
+  ]
 }
