--- a/manifest.json
+++ b/manifest.json
@@ -2,11 +2,11 @@
   "manifest_version": 2,
   "name": "Vault for Chrome",
   "description": "This extension will access specified Vault server and authenticate",
-  "version": "1.0",
+  "version": "1.1",
   "browser_action": {
     "default_icon": "icon.png",
     "default_popup": "popup.html",
-    "default_title": "Use Vault server"
+    "default_title": "VaultPass"
   },
   "options_page": "options.html",
   "content_scripts": [
@@ -15,13 +15,14 @@
         "<all_urls>"
       ],
       "js": [
-        "jquery-2.1.4.min.js",
+        "jquery-3.3.1.min.js",
         "content.js"
       ]
     }
   ],
   "permissions": [
     "activeTab",
+    "storage",
     "http://*/"
   ]
 }
